fixed scrollbar inconsistency

--- a/public/css/standardLayout.css
+++ b/public/css/standardLayout.css
@@ -76,6 +76,11 @@ body
   background-color: #5c3ce0;
 }
 
+html 
+{
+  overflow-y: scroll;
+}
+
 /* NAIGATION BAR */
 .navbar 
 {
